@@ -1,5 +1,7 @@
 2019-12-11  Ulrich Müller  <ulm@gentoo.org>
 
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.
+
 	* glep-mode.el (glep-mode-insert-skeleton): Update template to use
 	the CC-BY-SA-4.0 license, following the change in GLEP 2.
 
